manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mainplatform
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
